<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <com.baofeng.mj.ui.view.TitleBar
        android:id="@+id/rl_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/public_title_height"
        android:layout_alignParentTop="true"
        android:background="@color/app_white_title_bg" />

    <com.handmark.pulltorefresh.library.PullToRefreshRecyle
        xmlns:ptr="http://schemas.android.com/apk/res-auto"
        android:id="@+id/mPullToRefreshRecyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_title_bar"
        ptr:ptrAnimationStyle="flip"
        ptr:ptrMode="disabled"/>
    <LinearLayout
        android:id="@+id/layout_no_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_title_bar"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:src="@mipmap/local_screen_img_nothing"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="13sp"
            android:textColor="#999999"
            android:text="@string/mj_share_smb_device_no_list_1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="13sp"
            android:textColor="#999999"
            android:text="@string/mj_share_smb_device_no_list_2"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="11sp"
            android:textColor="#999999"
            android:gravity="start"
            android:text="@string/mj_share_smb_device_no_list_3"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="11sp"
            android:textColor="#999999"
            android:text="@string/mj_share_smb_device_no_list_4"/>

        <TextView
            android:id="@+id/textview_reset_scan"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:textSize="14sp"
            android:textColor="#7A4FC9"
            android:gravity="center"
            android:text="@string/mj_share_smb_device_no_list_button"
            android:background="@drawable/smb_device_reset_scan"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_first"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/rl_title_bar"
        android:gravity="center_horizontal"
        android:background="#ffffff"
        android:visibility="gone">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/local_screen_img_0"
            android:layout_marginTop="80dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#999999"
            android:textStyle="bold"
            android:lineSpacingExtra="3dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/mj_share_smb_first_msg"/>
        <TextView
            android:id="@+id/textview_tell_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#7A4FC9"
            android:layout_marginTop="30dp"
            android:text="@string/mj_share_smb_first_tell_me"/>

        <TextView
            android:id="@+id/textview_setting_ok"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginTop="50dp"
            android:textSize="14sp"
            android:textColor="#7A4FC9"
            android:gravity="center"
            android:text="@string/mj_share_smb_first_setting_ok"
            android:background="@drawable/smb_device_reset_scan"/>

    </LinearLayout>
</RelativeLayout>