<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <com.baofeng.mj.ui.view.TitleBar
        android:id="@+id/rl_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/public_title_height"
        android:layout_alignParentTop="true"
        android:background="@color/app_white_title_bg" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#D1D2D2" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/local_screen_img_help_1"
            android:layout_marginTop="40dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textSize="13sp"
            android:textColor="#262626"
            android:text="@string/mj_share_smb_help_share_1"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/local_screen_img_help_2"
            android:layout_marginTop="40dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textSize="13sp"
            android:textColor="#262626"
            android:text="@string/mj_share_smb_help_share_2"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/local_screen_img_help_3"
            android:layout_marginTop="40dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:textSize="13sp"
            android:textColor="#262626"
            android:text="@string/mj_share_smb_help_share_3"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>